Fix btn width on mobile

--- a/themes/inbeat/assets/scss/theme/_akia-customizations.scss
+++ b/themes/inbeat/assets/scss/theme/_akia-customizations.scss
@@ -229,6 +229,8 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 23px;
   font-weight: 400;
   font-family: $hfont;
+  text-align: center;
+  white-space: nowrap;
   &:hover {
     color: white !important;
   }
